--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,10 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
+    "axe-core": "^4.7.2",
     "cypress": "^12.17.2",
+    "cypress-axe": "^1.4.0",
+    "cypress-plugin-tab": "^1.0.5",
     "eslint": "^8.45.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-vue": "^9.15.1",
